* Moved timestamp function into customfunctions and you can now give it a sting to output as well
* Added app variable for use in timestamp to each updater
* removed wget and now using request.get through getfile function to download files
* removed tar subprocess and now using pythons tarfile to extract tars, function tar_extract added to customfunctions
* function tar_extract now being used in jackettupdate 


JackettUpdate Version 1.3 Beta
* Cleaned up some verbiage of output
* Changed tar to not vomit so much output into the log
* Added systemd files and a readme about using them
* Rewrote configupdate.py for better and smarter handling of python 2/3 compatibility
* Rewrote jackettupdate.py for better and smarter handling of python 2/3 compatibility
  also added a number of new try/catch blocks to attempt to better handle and report
  exceptions
*Rewrote selfupdate.py for better and smarter handling of python 2/3 compatibility
  also added a number of new try/catch blocks to attempt to better handle and report
  exceptions

JackettUpdate Version 1.2 Beta (Rolled 5/17/2020 as break fix)
* Corrected critical exception error caused by not using () on the end of one instance of timestamp() func

JackettUpdate Version 1.1 Beta (Rolled 5/17/2020)
* Fixed issue with incorrect URL (missed a t in jackett) in the selfupdater URL for this repo
* Corrected some default option errors in configupdate, the defaults are different for Jackett than Emby this script was forked form
* Fixed an incorrect variable in configupdate. One of the servstop variables made it into the servstart logic block
* Updated README.md file for use with Jackett
* Added systemd service name to configupdate
* Changed wording for server start and stop from manual to automatic (made more sense)
* Reworked handling of server stop/start (so it now works, silly boole) 
* Added more output to indicate what the script is currently doing


JackettUpdate version 1.0 Beta (Rolled 5/16/2020)